Added URL for filing bugs

--- a/README
+++ b/README
@@ -84,3 +84,5 @@ Contact
 Support requests and flames can be sent to me via several means.
 
 Email: yuvipanda@gmail.com. Twitter: @yuvipanda. IRC: yuvipanda on FreeNode
+
+You can file bugs `on Github <https://github.com/yuvipanda/python-mwapi/issues>`_.
